--- a/buildspec/buildspec_deploy1.yml
+++ b/buildspec/buildspec_deploy1.yml
@@ -18,45 +18,47 @@ phases:
       - curl -LO https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl
       - chmod +x kubectl
       - mv ./kubectl /usr/local/bin/kubectl
+      - kubectl version --client
       # Install Helm v3
       - curl -sSL https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
       - helm repo add stable https://charts.helm.sh/stable && helm repo update
- 
+
   pre_build:
     commands:
       - echo "Starting the pre_build phase..."
-      - echo "Checking AWS environment variables..."
+      - echo "Exporting environment variables..."
       - export AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION:-"us-west-2"}
+      - export AWS_PROFILE=default
       - echo "Region: $AWS_DEFAULT_REGION"
       - echo "Cluster Name: $EKS_CLUSTER_NAME"
-      - helm version
-      - mkdir -p ~/.kube/
+      - echo "Role ARN: $EKS_CODEBUILD_ROLE_ARN"
+						 
       # Update kubeconfig for EKS
-      - echo "Updating kubeconfig..."
-      - aws eks --region $AWS_DEFAULT_REGION update-kubeconfig --name $EKS_CLUSTER_NAME --role-arn $EKS_CODEBUILD_ROLE_ARN || exit 1
-      - echo "Validating kubeconfig..."
+      - echo "Updating kubeconfig for EKS cluster..."
+      - aws eks --region $AWS_DEFAULT_REGION update-kubeconfig --name $EKS_CLUSTER_NAME --role-arn $EKS_CODEBUILD_ROLE_ARN || { echo "Failed to update kubeconfig"; exit 1; }
+      - echo "Validating kubeconfig file..."
       - cat ~/.kube/config
       - chmod 0600 ~/.kube/config
       # Validate AWS identity
-      - echo "Checking AWS identity..."
-      - aws sts get-caller-identity
-      # Validate kubectl connection
-      - echo "Validating kubectl connection to cluster..."
-      - kubectl get nodes || { echo "Failed to connect to the cluster. Exiting."; exit 1; }
- 
+      - echo "Validating AWS CLI authentication..."
+      - aws sts get-caller-identity || { echo "AWS CLI is not authenticated properly"; exit 1; }
+      # Test Kubernetes API access
+      - echo "Testing Kubernetes API connection..."
+      - kubectl get nodes || { echo "Failed to connect to Kubernetes cluster"; exit 1; }
+
   build:
     commands:
       - echo "Starting the build phase..."
       - helm upgrade -i $EKS_CODEBUILD_APP_NAME-$ENV helm_charts/$EKS_CODEBUILD_APP_NAME \
         -f helm_charts/$EKS_CODEBUILD_APP_NAME/values.$ENV.yaml \
         --set image.repository=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME \
-        --set image.tag=$CODEBUILD_RESOLVED_SOURCE_VERSION || exit 1
- 
+        --set image.tag=$CODEBUILD_RESOLVED_SOURCE_VERSION || { echo "Helm deployment failed"; exit 1; }
+
   post_build:
     commands:
       - echo "Starting the post_build phase..."
       - bash -c "if [ \"$CODEBUILD_BUILD_SUCCEEDING\" == \"0\" ]; then echo 'Build failed'; exit 1; fi"
-      - echo "Waiting for the application to become ready..."
+      - echo "Waiting for application readiness..."
       - sleep 60
-      - JAVA_APP_ENDPOINT=$(kubectl get svc $EKS_CODEBUILD_APP_NAME-$ENV -o jsonpath="{.status.loadBalancer.ingress[*].hostname}") || exit 1
+      - JAVA_APP_ENDPOINT=$(kubectl get svc $EKS_CODEBUILD_APP_NAME-$ENV -o jsonpath="{.status.loadBalancer.ingress[*].hostname}") || { echo "Failed to retrieve application endpoint"; exit 1; }
       - echo "The Java application can be accessed via http://$JAVA_APP_ENDPOINT/hello"
